--- a/src/modules/quotes/components/Quote/style.scss
+++ b/src/modules/quotes/components/Quote/style.scss
@@ -6,7 +6,7 @@
     padding: 8px;
 
     &__text {
-        font-size: 2em;
+        font-size: 2rem;
         &::before {
             content: "\201C";
             margin-right: 2px;
@@ -18,6 +18,7 @@
     }
 
     &__authorContainer {
+        font-size: 1rem;
         font-style: italic;
         text-align: right;
     }
