:zap: Add Weather module settings

--- a/src/containers/Settings.scss
+++ b/src/containers/Settings.scss
@@ -1,3 +1,13 @@
 body {
     min-width: 620px;
 }
+
+.settings {
+    &__inlineItem {
+        display: inline-block;
+        margin-right: 12px;
+        &:last-child {
+            margin-right: 0px;
+        }
+    }
+}
