--- a/src/modules/weather/components/Weather/style.scss
+++ b/src/modules/weather/components/Weather/style.scss
@@ -3,12 +3,17 @@
     display: inline-block;
     padding: 8px;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: background-color 1s;
+    transition: all 1s;
     cursor: default;
     user-select: none;
+    opacity: 1;
 
     &:hover {
         background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    &__loading {
+        opacity: 0;
     }
 
     &__temperature, &__image {
