--- a/src/modules/clock/components/Clock/style.scss
+++ b/src/modules/clock/components/Clock/style.scss
@@ -11,7 +11,7 @@
     text-align: center;
     user-select: none;
 
-    &__hours, &__minutes, &__divider {
+    &__hours, &__minutes {
         display: inline-block;
     }
 
@@ -22,6 +22,12 @@
             position: relative;
             top: -12px;
         }
+    }
+
+    &__date {
+        font-size: 26px;
+        margin-top: -22px;
+        letter-spacing: 4px;
     }
 
     &_blink {
