--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -4,3 +4,10 @@
             url('../fonts/Roboto-Regular.woff2') format('woff2'),
             url('../fonts/Roboto-Regular.woff') format('woff');
 }
+
+@font-face {
+    font-family: 'MeteoconsRegular';
+    src: url('../fonts/meteocons-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
