--- a/src/modules/weather/components/Weather/style.scss
+++ b/src/modules/weather/components/Weather/style.scss
@@ -3,38 +3,154 @@
     display: inline-block;
     padding: 8px;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: all 1s;
+    transition: background-color 1s ease, opacity 0.8s ease;
     cursor: default;
     user-select: none;
-    opacity: 1;
+    opacity: 0.7;
 
     &:hover {
         background-color: rgba(0, 0, 0, 0.5);
+        opacity: 1;
     }
 
     &__loading {
         opacity: 0;
-    }
-
-    &__temperature, &__image {
-        display: inline-block;
+        &:hover, &:active {
+            opacity: 0;
+        }
     }
 
     &__temperature {
-        font-size: 28px;
+        display: inline-block;
+        font-size: 34px;
         font-weight: 800;
         &::after {
             content: "\00b0";
         }
     }
 
-    &__image {
-        width: 36px;
-        height: 36px;
-        vertical-align: top;
+    &__cityName {
+        font-size: 14px;
     }
 
-    &__cityName {
-        font-size: 12px;
+    &__icon {
+        display: inline-block;
+        font-family: MeteoconsRegular;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: normal;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        vertical-align: text-bottom;
+        margin-left: 4px;
+
+        &_01d {
+            &:before {
+                content: "B";
+            }
+        }
+
+        &_02d {
+            &:before {
+                content: "H";
+            }
+        }
+
+        &_03d {
+            &:before {
+                content: "N";
+            }
+        }
+
+        &_04d {
+            &:before {
+                content: "Y";
+            }
+        }
+
+        &_09d {
+            &:before {
+                content: "R";
+            }
+        }
+
+        &_10d {
+            &:before {
+                content: "T";
+            }
+        }
+
+        &_11d {
+            &:before {
+                content: "O";
+            }
+        }
+
+        &_13d {
+            &:before {
+                content: "W";
+            }
+        }
+
+        &_50d {
+            &:before {
+                content: "J";
+            }
+        }
+
+        &_01n {
+            &:before {
+                content: "C";
+            }
+        }
+
+        &_02n {
+            &:before {
+                content: "I";
+            }
+        }
+
+        &_03n {
+            &:before {
+                content: "N";
+            }
+        }
+
+        &_04n {
+            &:before {
+                content: "Y";
+            }
+        }
+
+        &_09n {
+            &:before {
+                content: "R";
+            }
+        }
+
+        &_10n {
+            &:before {
+                content: "T";
+            }
+        }
+
+        &_11n {
+            &:before {
+                content: "O";
+            }
+        }
+
+        &_13n {
+            &:before {
+                content: "W";
+            }
+        }
+
+        &_50n {
+            &:before {
+                content: "K";
+            }
+        }
+
     }
 }
