--- a/src/modules/todolist/components/List/style.scss
+++ b/src/modules/todolist/components/List/style.scss
@@ -46,6 +46,7 @@
             justify-content: center;
             padding: 12px;
             font-size: 16px;
+            cursor: text;
         }
     }
 
