--- a/src/modules/background/components/FullscreenImage/style.scss
+++ b/src/modules/background/components/FullscreenImage/style.scss
@@ -1,13 +1,15 @@
 .background {
-    position: fixed;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
-    z-index: -1;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: scroll;
+    &__imageContainer {
+        position: fixed;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        z-index: -1;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: scroll;
+    }
 
     &__image, &__overlay {
         position: absolute;
@@ -18,6 +20,15 @@
         margin: auto;
         min-width: 50%;
         min-height: 50%;
+    }
+
+    &__credits {
+        position: absolute;
+        bottom: 90px;
+        transform: rotate(270deg);
+        transform-origin: left top 0;
+        z-index: 10;
+        float: left;
     }
 
     &__overlay {
