:zap: Use svg icons for improved rendering on Windows

--- a/src/modules/background/components/Credits/style.scss
+++ b/src/modules/background/components/Credits/style.scss
@@ -16,8 +16,7 @@
     }
 
     &__icon {
-        margin-right: 4px;
-        vertical-align: middle;
+        font-size: 18px;
     }
 
     &__item {
