:art: Minor style adjustments

--- a/src/modules/clock/components/Clock/style.scss
+++ b/src/modules/clock/components/Clock/style.scss
@@ -5,6 +5,7 @@
 }
 
 .clock {
+    display: inline-block;
     font-size: 160px;
     text-shadow: 2px 3px 3px rgba(0, 0, 0, 0.5);
     cursor: default;
