--- a/src/containers/TabPage.scss
+++ b/src/containers/TabPage.scss
@@ -21,6 +21,8 @@ body {
         position: absolute;
         top: 20%;
         width: 100%;
+        margin: 0 auto;
+        text-align: center;
     }
 
     &__bottomContainer {
