--- a/src/modules/quotes/components/Quote/style.scss
+++ b/src/modules/quotes/components/Quote/style.scss
@@ -1,17 +1,19 @@
+@import 'assets/styles/mixins';
+
 .quote {
-    text-shadow: 2px 3.464px 2px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
     text-align: center;
-    letter-spacing: 1px;
+    letter-spacing: 1.2px;
     padding: 8px 16px;
     transition: background-color 1s;
-    background-color: rgba(0, 0, 0, 0.2);
+    @include background-gradient;
 
     &:hover {
         background-color: rgba(0, 0, 0, 0.5);
     }
 
     &__text {
-        font-size: 24px;
+        font-size: 20px;
     }
 
     &__authorContainer {
