--- a/src/containers/TabPage.scss
+++ b/src/containers/TabPage.scss
@@ -10,10 +10,27 @@ body {
         top: 0px;
 
         &_right {
-            right: 0px;
+            transition: right .2s ease;
+            right: -36px;
+            display: flex;
+            &:hover {
+                right: 0px;
+                .panel__topContainer__icon {
+                    opacity: 0;
+                }
+            }
         }
         &_left {
             left: 0px;
+        }
+
+        &__icon {
+            transition: opacity .2s ease;
+            max-height: max-content;
+            padding: 2px 4px 4px;
+            background-color: rgba(0, 0, 0, 0.2);
+            opacity: 0.4;
+            font-size: 16px;
         }
     }
 
@@ -33,8 +50,8 @@ body {
 
     &__draggableContainer {
         position: absolute;
-        top: 60px;
-        right: 20px;
+        top: 42px;
+        right: 42px;
         z-index: 2;
     }
 }
@@ -42,13 +59,14 @@ body {
 .control {
     background-color: rgba(0, 0, 0, 0.2);
     transition: background-color 1s;
+    display: inline-block;
 
     &:hover {
         background-color: rgba(0, 0, 0, 0.5);
     }
 
     &__icon {
-        display: inline-block;
+        display: block;
         opacity: 0.4;
         transition: opacity 0.8s;
 
