:package: GA and minor updates

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,6 +43,11 @@ a.btn.disabled{
 	background-color: #ccc;
 }
 
+a.btn.disabled:hover{
+	opacity: 0.9;
+	cursor: default;
+}
+
 .hidden{
 	display: none;
 }
